fix menue spacing for options

--- a/learn-koine/src/Menu.css
+++ b/learn-koine/src/Menu.css
@@ -9,11 +9,13 @@
 
 .menu-options {
     padding-left: 5px;
+    padding-bottom: 19px;
 }
 
 
 .menu-links {
     padding-left: 5px;
+    margin-bottom: 55px;
 }
 
 .menu-container {
@@ -41,6 +43,7 @@
     background: none;
     font-size: large;
     cursor: pointer; 
+    margin-bottom: 20px;
 }
 
 .menu-toggle-button {
